--- a/ansible/bootstrap.yml
+++ b/ansible/bootstrap.yml
@@ -1,4 +1,4 @@
 # Conditional example
 - name: Bootstrap
   roles:
-      - "{{ansible_local.bootstrap.ansible.role}}"
+      - { role: jenkins_master, when: "ansible_local.bootstrap.ansible.role == 'jenkins_master'" }
