--- a/ansible/bootstrap.yml
+++ b/ansible/bootstrap.yml
@@ -1,4 +1,4 @@
 # Conditional example
 - name: Bootstrap
   roles:
-      - { role: jenkins_master, when: "ansible_local.bootstrap.ansible.role == 'jenkins_master'" }
+      - { role: jenkins-master, when: "ansible_local.bootstrap.ansible.role == 'jenkins-master'" }
