[MSP-19] set hosts

--- a/ansible/bootstrap.yml
+++ b/ansible/bootstrap.yml
@@ -1,4 +1,5 @@
 # Conditional example
 - name: Bootstrap
+  hosts: all
   roles:
       - { role: jenkins-master, when: "ansible_local.bootstrap.ansible.role == 'jenkins-master'" }
