--- a/ansible/roles/jenkins-master/meta/main.yml
+++ b/ansible/roles/jenkins-master/meta/main.yml
@@ -2,6 +2,6 @@
 dependencies:
   - role: caddy-ansible
     caddy_config: |
-      {{ansible_ec2_public_hostname}}
+      {{ansible_fqdn}}
       proxy / localhost:8080
       tls
