--- a/ansible/roles/jenkins-master/meta/main.yml
+++ b/ansible/roles/jenkins-master/meta/main.yml
@@ -2,6 +2,6 @@
 dependencies:
   - role: caddy-ansible
     caddy_config: |
-      {{ansible_fqdn}}
+      {{ansible_nodename}}
       proxy / localhost:8080
-      tls
+      tls {{admin_email}}
