add docker setup

--- a/ansible/roles/jenkins-master/meta/main.yml
+++ b/ansible/roles/jenkins-master/meta/main.yml
@@ -1,6 +1,7 @@
 ---
 dependencies:
   - role: vault-certs
+  - role: docker
   - role: caddy-ansible
     caddy_config: |
       {{ansible_nodename}}
