--- a/ansible/roles/jenkins-master/defaults/main.yml
+++ b/ansible/roles/jenkins-master/defaults/main.yml
@@ -1,4 +1,111 @@
 jenkins_admin_username: admin
 jenkins_admin_password: admin
 admin_email: miles.wilson@opencredo.com
-jenkins_plugins: "scm-api blueocean-web authentication-tokens external-monitor-job docker-workflow blueocean-dashboard blueocean-autofavorite workflow-aggregator docker-commons workflow-cps pipeline-build-step pipeline-model-api workflow-durable-task-step credentials bouncycastle-api blueocean-i18n workflow-scm-step structs ace-editor blueocean config-file-provider ssh-credentials pipeline-utility-steps maven-plugin pam-auth email-ext momentjs display-url-api workflow-job ldap modernstatus github-organization-folder antisamy-markup-formatter blueocean-rest favorite workflow-support blueocean-personalization blueocean-git-pipeline docker-build-publish branch-api mapdb-api cloudbees-folder pipeline-model-declarative-agent blueocean-pipeline-api-impl git pipeline-milestone-step sse-gateway blueocean-events handlebars javadoc matrix-auth build-timeout gradle matrix-project amazon-ecr durable-task pipeline-github-lib blueocean-config workflow-cps-global-lib git-client pipeline-graph-analysis git-server mailer aws-credentials pipeline-stage-step ssh-agent resource-disposer workflow-basic-steps ant aws-java-sdk credentials-binding token-macro workflow-step-api jackson2-api metrics windows-slaves github workflow-multibranch github-api pubsub-light pipeline-stage-view blueocean-display-url jquery-detached blueocean-rest-impl ssh-slaves pipeline-input-step timestamper blueocean-jwt github-branch-source pipeline-rest-api pipeline-model-definition icon-shim plain-credentials variant ansicolor lockable-resources junit blueocean-commons promoted-builds script-security blueocean-github-pipeline subversion pipeline-stage-tags-metadata kubernetes workflow-api"
+jenkins_plugins: >
+    ace-editor
+    amazon-ecr
+    ansicolor
+    ant
+    antisamy-markup-formatter
+    authentication-tokens
+    aws-credentials
+    aws-java-sdk
+    blueocean
+    blueocean-autofavorite
+    blueocean-commons
+    blueocean-config
+    blueocean-dashboard
+    blueocean-display-url
+    blueocean-events
+    blueocean-git-pipeline
+    blueocean-github-pipeline
+    blueocean-i18n
+    blueocean-jwt
+    blueocean-personalization
+    blueocean-pipeline-api-impl
+    blueocean-rest
+    blueocean-rest-impl
+    blueocean-web
+    bouncycastle-api
+    branch-api
+    build-timeout
+    cloudbees-folder
+    config-file-provider
+    credentials
+    credentials-binding
+    custom-tools-plugin
+    display-url-api
+    docker-build-publish
+    docker-commons
+    docker-workflow
+    durable-task
+    email-ext
+    external-monitor-job
+    favorite
+    git
+    git-client
+    git-server
+    github
+    github-api
+    github-branch-source
+    github-organization-folder
+    gradle
+    handlebars
+    icon-shim
+    jackson2-api
+    javadoc
+    jquery-detached
+    junit
+    kubernetes
+    ldap
+    lockable-resources
+    mailer
+    mapdb-api
+    matrix-auth
+    matrix-project
+    maven-plugin
+    metrics
+    modernstatus
+    momentjs
+    pam-auth
+    pipeline-build-step
+    pipeline-github-lib
+    pipeline-graph-analysis
+    pipeline-input-step
+    pipeline-milestone-step
+    pipeline-model-api
+    pipeline-model-declarative-agent
+    pipeline-model-definition
+    pipeline-rest-api
+    pipeline-stage-step
+    pipeline-stage-tags-metadata
+    pipeline-stage-view
+    pipeline-utility-steps
+    plain-credentials
+    promoted-builds
+    pubsub-light
+    resource-disposer
+    scm-api
+    script-security
+    sse-gateway
+    ssh-agent
+    ssh-credentials
+    ssh-slaves
+    structs
+    subversion
+    terraform
+    timestamper
+    token-macro
+    variant
+    windows-slaves
+    workflow-aggregator
+    workflow-api"
+    workflow-basic-steps
+    workflow-cps
+    workflow-cps-global-lib
+    workflow-durable-task-step
+    workflow-job
+    workflow-multibranch
+    workflow-scm-step
+    workflow-step-api
+    workflow-support
